--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,12 +22,15 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   font-family: var(--font-sans);
   background-color: var(--color-primary);
   color: var(--color-white);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 a {
